--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="ask">Ask</string>
+    <string name="titleText">Make everyday decisions easier!</string>
+    <string name="ballImage">Ball Image</string>
+    <string name="imageBall">Ball image</string>
 </resources>
